--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "mypsn",
   "displayName": "MyPSN",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Unofficial My Playstation Desktop Application",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dist": "build --win",
-    "build": "electron-packager . MyPSN --overwrite --platform=win32 --arch=ia32 --icon=assets/psn.ico --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"MyPSN\""
+    "build": "electron-packager . MyPSN --overwrite --platform=win32 --arch=ia32 --icon=app/assets/psn.ico --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"MyPSN\""
   },
   "keywords": [],
   "author": "Liam",
@@ -22,7 +22,7 @@
   "build": {
     "appId": "com.liam.mypsn",
     "win": {
-        "icon": "app/assets/psn.ico"
+      "icon": "app/assets/psn.ico"
     }
-}
+  }
 }
