--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
   "license": "MIT",
   "devDependencies": {
     "jquery": "3.3.1",
-    "electron": "1.8.2",
     "electron-builder": "^20.0.8",
     "electron-packager": "^11.0.1",
-    "electron-winstaller": "^2.6.4"
+    "electron-winstaller": "^2.6.4",
+    "electron": "^2.0.0-beta.2"
   },
   "build": {
     "appId": "com.liam.mypsn",
